kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: registry.digitalocean.com/peerprep/user-service@sha256:29b15b66588998e772d2fdcb4376470dad900bc177b38df45fc62650c0b362aa
        imagePullPolicy: IfNotPresent
        name: user-service
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      restartPolicy: Always
status: {}
