kubernetes/collaboration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collaboration-service
  namespace: peerprep
spec:
  selector:
    app: collaboration-service
  ports:
    - protocol: "TCP"
      port: 3004
      targetPort: 3004
      # nodePort: 30083
  type: ClusterIP # NodePort
