kubernetes/communication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: communication-service
  namespace: peerprep
spec:
  selector:
    app: communication-service
  ports:
    - protocol: "TCP"
      port: 3005
      targetPort: 3005
      # nodePort: 30084
  type: ClusterIP # NodePort
