kubernetes/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matching-service
  name: matching-service
  namespace: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
      - image: <IMAGE>
        imagePullPolicy: IfNotPresent
        name: matching-service
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: peerprep
spec:
  selector:
    app: matching-service
  ports:
    - protocol: "TCP"
      port: 3003
      targetPort: 3003
  type: ClusterIP
