kubernetes/matching-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: peerprep
spec:
  selector:
    app: matching-service
  ports:
    - protocol: "TCP"
      port: 3003
      targetPort: 3003
      # nodePort: 30082
  type: ClusterIP # NodePort
