kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: peerprep
spec:
  selector:
    app: user-service
  ports:
    - protocol: "TCP"
      port: 3002
      targetPort: 3002
      # nodePort: 30081
  type: ClusterIP # NodePort
