kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  namespace: peerprep
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/question-service"
        backend:
          service:
            name: question-service
            port:
              number: 3001
      - pathType: Prefix
        path: "/user-service"
        backend:
          service:
            name: user-service
            port:
              number: 3002     
      - pathType: Prefix
        path: "/matching-service"
        backend:
          service:
            name: matching-service
            port:
              number: 3003
      - pathType: Prefix
        path: "/collaboration-service"
        backend:
          service:
            name: collaboration-service
            port:
              number: 3004
      - pathType: Prefix
        path: "/communication-service"
        backend:
          service:
            name: communication-service
            port:
              number: 3005
